# System-Info-Detector-02

./: README.md
SystemInfoDetector/: CMakeLists.txt
SystemInfoDetector/include/: hardware_info.h  system_info.h  utils.h
SystemInfoDetector/src/: hardware_info.c  main.c  system_info.c  utils.c
SystemInfoDetector/tests/: test_main.c
